<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:genius="http://schemas.android.com/apk/res-auto"
    tools:context="br.com.williamsilva.economizze.view.ReceitaActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/branco_acinzentado"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/branco_acinzentado">

        <TextView
            android:id="@+id/txtNomeReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            android:text="@string/nome_da_receita"
            />
        <EditText
            android:id="@+id/nomeReceita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_receita"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            />
        <EditText
            android:id="@+id/valorReceita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:numeric="decimal"/>
        <CheckBox
            android:id="@+id/receitaFixa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receita_fixa"
            android:layout_margin="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/selecione_data"/>
        <TextView
            android:id="@+id/dataReceita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10sp"
            android:textSize="18sp"
            android:layout_marginBottom="22sp"
            android:background="@color/branco"
            />

       <net.qiujuer.genius.widget.GeniusButton
           android:id="@+id/salvarReceita"
           android:layout_width="match_parent"
           android:layout_height="55sp"
           android:layout_marginRight="60sp"
           android:layout_marginLeft="60sp"
           android:text="@string/salvar"
           android:onClick="salvarReceita"
           genius:g_delayClick="true"
           android:background="@color/verde"
           genius:g_touchEffect="press"
           genius:g_cornerRadii_A="5dp"
           genius:g_cornerRadii_B="5dp"
           genius:g_cornerRadii_C="5dp"
           genius:g_cornerRadii_D="5dp"
           genius:g_touchEffectColor="@color/verde_basico"
           genius:g_blockButtonEffectHeight="10dp"
           />


        </LinearLayout>

</ScrollView>
